增加README对编译的说明

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,8 @@ SET(CMAKE_VERBOSE_MAKEFILE OFF)
 set(CMAKE_COLOR_DIAGNOSTICS TRUE)
 
 #设置生成目标的目录
-set(EXECUTABLE_OUTPUT_PATH output)
+set(EXECUTABLE_OUTPUT_PATH out)
+set(LIBRARY_OUTPUT_PATH out)
 
 #生成静态库
 add_library(${CRC_LIB_NAME} STATIC)
