--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(crc_test C)
 add_executable(${PROJECT_NAME})
 
 #是否开启更详细的编译过程信息显示
-SET(CMAKE_VERBOSE_MAKEFILE OFF)
+SET(CMAKE_VERBOSE_MAKEFILE ON)
 
 # 彩色日志输出；
 set(CMAKE_COLOR_DIAGNOSTICS TRUE)
@@ -13,11 +13,19 @@ set(CMAKE_COLOR_DIAGNOSTICS TRUE)
 #设置生成目标的目录
 set(EXECUTABLE_OUTPUT_PATH out)
 
+#FALSE:Release
+#TRUE:DEBUG
+set(DEBUG TRUE)
+
 #C标准
 set(C_STD -std=c99)
 
 #优化等级
-set(OPT -O0 -g)
+if(${DEBUG})
+    set(OPT -O0 -g) 
+else()
+    set(OPT -O3)
+endif()
 
 #全局宏
 target_compile_definitions(${PROJECT_NAME}
@@ -43,6 +51,6 @@ target_sources(${PROJECT_NAME}
 target_compile_options(${PROJECT_NAME}
     PRIVATE
     ${C_STD}
-    -Wall
     ${OPT}
+    -Wall
 )
